--- a/index.html
+++ b/index.html
@@ -1,81 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>VIKI AI Login</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <title>VIKI$WORLD – Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body{font-family:Arial;background:#f0f2f5;margin:0}
+    header{background:#1877f2;color:white;padding:15px;text-align:center;font-size:20px}
+    .box{background:white;margin:15px;padding:15px;border-radius:10px}
+    textarea{width:100%;height:70px}
+    button{background:#1877f2;color:white;border:none;padding:10px;width:100%;margin-top:5px}
+  </style>
 </head>
 <body>
 
-<div class="container">
-  <h2>VIKI AI</h2>
+<header>VIKI$WORLD – Facebook Style</header>
 
-  <input type="email" id="email" placeholder="Email" />
-  <input type="password" id="password" placeholder="Password" />
-
-  <button onclick="loginUser()">Login</button>
-  <button onclick="signupUser()">Sign Up</button>
-
-  <p id="msg"></p>
+<div class="box">
+  <textarea id="post"></textarea>
+  <button onclick="addPost()">Post</button>
 </div>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import {
-    getAuth,
-    signInWithEmailAndPassword,
-    createUserWithEmailAndPassword
-  } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+<div id="feed"></div>
 
-  // 🔥 Firebase Config (FINAL)
-  const firebaseConfig = {
-    apiKey: "AIzaSyBn9doD99wq5gU8kCVu3g8Kz16iabZqGKA",
-    authDomain: "viki-49b73.firebaseapp.com",
-    projectId: "viki-49b73",
-    storageBucket: "viki-49b73.firebasestorage.app",
-    messagingSenderId: "92668810768",
-    appId: "1:92668810768:web:d0029f292bbf16e94d5c95"
-  };
+<script src="firebase.js"></script>
+<script>
+auth.onAuthStateChanged(user=>{
+  if(!user) location.href="login.html";
+});
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
+function addPost(){
+  const text=post.value;
+  if(!text) return;
+  db.collection("posts").add({
+    text:text,
+    time:Date.now()
+  });
+  post.value="";
+}
 
-  // ⚠️ CHANGE ONLY IF YOUR ADMIN EMAIL IS DIFFERENT
-  const ADMIN_EMAIL = "admin@viki.ai";
-
-  const msg = document.getElementById("msg");
-
-  window.loginUser = function () {
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    signInWithEmailAndPassword(auth, email, password)
-      .then((res) => {
-        if (res.user.email === ADMIN_EMAIL) {
-          window.location.href = "admin.html";
-        } else {
-          window.location.href = "dashboard.html";
-        }
-      })
-      .catch((err) => {
-        msg.innerText = err.message;
-      });
-  };
-
-  window.signupUser = function () {
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    createUserWithEmailAndPassword(auth, email, password)
-      .then(() => {
-        msg.innerText = "Signup successful. Now login.";
-      })
-      .catch((err) => {
-        msg.innerText = err.message;
-      });
-  };
+db.collection("posts").orderBy("time","desc")
+.onSnapshot(s=>{
+  feed.innerHTML="";
+  s.forEach(d=>{
+    feed.innerHTML+=`<div class='box'>${d.data().text}</div>`;
+  });
+});
 </script>
-
 </body>
 </html>
