--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>VIKI$WORLD – Home</title>
+  <title>VIKI$WORLD – Facebook Style</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body{font-family:Arial;background:#f0f2f5;margin:0}
     header{background:#1877f2;color:white;padding:15px;text-align:center;font-size:20px}
     .box{background:white;margin:15px;padding:15px;border-radius:10px}
     textarea{width:100%;height:70px}
-    button{background:#1877f2;color:white;border:none;padding:10px;width:100%;margin-top:5px}
+    button{background:#1877f2;color:white;border:none;padding:10px;width:100%;margin-top:5px;border-radius:8px}
   </style>
 </head>
 <body>
@@ -16,35 +16,49 @@
 <header>VIKI$WORLD – Facebook Style</header>
 
 <div class="box">
-  <textarea id="post"></textarea>
+  <textarea id="postText" placeholder="What's on your mind?"></textarea>
   <button onclick="addPost()">Post</button>
 </div>
 
 <div id="feed"></div>
 
+<!-- Firebase -->
 <script src="firebase.js"></script>
+
 <script>
+// 🔒 AUTH GUARD (THIS IS THE MAIN FIX)
 auth.onAuthStateChanged(user=>{
-  if(!user) location.href="login.html";
+  if(!user){
+    // ❌ Login nahi → login page
+    window.location.href = "login.html";
+  }
 });
 
+// ➕ ADD POST
 function addPost(){
-  const text=post.value;
+  const text = postText.value.trim();
   if(!text) return;
+
   db.collection("posts").add({
-    text:text,
-    time:Date.now()
+    text: text,
+    time: Date.now()
   });
-  post.value="";
+
+  postText.value = "";
 }
 
-db.collection("posts").orderBy("time","desc")
-.onSnapshot(s=>{
-  feed.innerHTML="";
-  s.forEach(d=>{
-    feed.innerHTML+=`<div class='box'>${d.data().text}</div>`;
+// 📥 LOAD POSTS
+db.collection("posts")
+.orderBy("time","desc")
+.onSnapshot(snapshot=>{
+  feed.innerHTML = "";
+  snapshot.forEach(doc=>{
+    feed.innerHTML += `
+      <div class="box">${doc.data().text}</div>
+    `;
   });
 });
 </script>
+
 </body>
 </html>
