--- a/login.html
+++ b/login.html
@@ -1,18 +1,29 @@
-<script src="firebase.js"></script>
-<script>
-function login(){
-  auth.signInWithEmailAndPassword(email.value,password.value)
-  .then(()=>{
-    window.location.href = "index.html";
-  })
-  .catch(e=>msg.innerText=e.message);
-}
-
-function signup(){
-  auth.createUserWithEmailAndPassword(email.value,password.value)
-  .then(()=>{
-    window.location.href = "index.html";
-  })
-  .catch(e=>msg.innerText=e.message);
-}
-</script>
+<!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login – VIKI AI World</title>
+  <meta name="theme-color" content="#4f46e5" />
+  <style>
+    *{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif}
+    body{background:#0f172a;color:#e5e7eb;display:flex;align-items:center;justify-content:center;min-height:100vh}
+    .card{background:#020617;border-radius:16px;padding:22px;width:100%;max-width:380px;box-shadow:0 0 20px rgba(56,189,248,0.12)}
+    h1{color:#38bdf8;text-align:center;margin-bottom:6px}
+    p{color:#94a3b8;text-align:center;font-size:13px;margin-bottom:14px}
+    input{width:100%;padding:12px;margin:8px 0;border-radius:10px;border:none;background:#020617;color:#e5e7eb;outline:1px solid #1f2937}
+    .btn{width:100%;padding:12px;border-radius:12px;border:none;background:#38bdf8;color:#020617;font-weight:bold;margin-top:10px}
+    .link{display:block;text-align:center;margin-top:12px;color:#22d3ee;text-decoration:none;font-size:13px}
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Login</h1>
+    <p>VIKI AI World</p>
+    <input type="email" placeholder="Email" />
+    <input type="password" placeholder="Password" />
+    <button class="btn">Login</button>
+    <a class="link" href="signup.html">Create new account</a>
+    <a class="link" href="index.html">← Back to Home</a>
+  </div>
+</body>
+</html>
