--- a/index.html
+++ b/index.html
@@ -1,56 +1,82 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VIKI AI World</title>
-  <meta name="theme-color" content="#4f46e5" />
-  <style>
-    *{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif}
-    body{background:#0f172a;color:#e5e7eb}
-    header{padding:20px;text-align:center;background:#020617}
-    header h1{color:#38bdf8;font-size:26px}
-    header p{color:#94a3b8;font-size:14px;margin-top:6px}
-    .container{padding:20px;max-width:900px;margin:auto}
-    .card{background:#020617;border-radius:14px;padding:18px;margin-bottom:16px;box-shadow:0 0 15px rgba(56,189,248,0.08)}
-    .card h2{color:#22d3ee;font-size:20px;margin-bottom:10px}
-    .card p{font-size:14px;color:#cbd5f5;line-height:1.6}
-    .btn{display:inline-block;margin-top:12px;padding:10px 16px;border-radius:10px;background:#38bdf8;color:#020617;font-weight:bold;text-decoration:none}
-    .features li{margin:8px 0;font-size:14px;color:#e5e7eb}
-    footer{text-align:center;padding:14px;font-size:12px;color:#94a3b8}
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VIKI AI World</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+        h1 {
+            font-size: 2rem;
+            margin: 0;
+        }
+        p {
+            font-size: 1rem;
+            margin-top: 0.5rem;
+        }
+        .buttons {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+            max-width: 300px;
+        }
+        button {
+            padding: 1rem;
+            margin: 0.5rem 0;
+            font-size: 1rem;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .login-btn {
+            background-color: #007bff;
+            color: white;
+        }
+        .login-btn:hover {
+            background-color: #0056b3;
+        }
+        .signup-btn {
+            background-color: #28a745;
+            color: white;
+        }
+        .signup-btn:hover {
+            background-color: #218838;
+        }
+        @media (min-width: 768px) {
+            .buttons {
+                flex-direction: row;
+                justify-content: space-around;
+            }
+            button {
+                width: 45%;
+            }
+        }
+    </style>
 </head>
-<body><header>
-  <h1>VIKI AI WORLD</h1>
-  <p>Free • Real • Frontend First • Mobile Friendly</p>
-</header><div class="container">  <div class="card">
-    <h2>About This Project</h2>
-    <p>
-      VIKI AI World ek real frontend-based web app hai jo un logon ke liye banayi gayi hai
-      jo bina paisay, bina heavy tools, sirf mobile phone se apps aur websites banana chahte hain.
-    </p>
-  </div>  <div class="card">
-    <h2>Main Features (Frontend)</h2>
-    <ul class="features">
-      <li>✔ Clean Mobile UI</li>
-      <li>✔ Login / Signup Screens (UI Ready)</li>
-      <li>✔ AI App Style Layout</li>
-      <li>✔ GitHub Pages Compatible</li>
-      <li>✔ Firebase Ready (Backend baad mein)</li>
-    </ul>
-  </div>  <div class="card">
-    <h2>Future Plan</h2>
-    <p>
-      Backend baad mein Firebase ke sath add hoga jisme:
-      login system, database, multi-user support aur real features shamil honge.
-    </p>
-  </div>  <div class="card">
-    <h2>Get Started</h2>
-    <p>
-      Abhi ye website sirf frontend hai — real, fast aur free.
-      Isay seedha GitHub par upload karke GitHub Pages se live kiya ja sakta hai.
-    </p>
-    <a class="btn" href="#">Coming Soon</a>
-  </div></div><footer>
-  © 2025 VIKI AI World • Built with Free Tools
-</footer></body>
+<body>
+    <header>
+        <h1>VIKI AI World</h1>
+        <p>Welcome to the future of AI interaction</p>
+    </header>
+    <div class="buttons">
+        <button class="login-btn" onclick="window.location.href='login.html'">Login</button>
+        <button class="signup-btn" onclick="window.location.href='signup.html'">Sign Up</button>
+    </div>
+</body>
 </html>
