--- a/login.html
+++ b/login.html
@@ -1,93 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login – VIKI AI World</title>
-  <meta name="theme-color" content="#4f46e5" />
-  <style>
-    *{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif}
-    body{
-      background:#0f172a;
-      color:#e5e7eb;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      min-height:100vh
-    }
-    .card{
-      background:#020617;
-      border-radius:16px;
-      padding:22px;
-      width:100%;
-      max-width:380px;
-      box-shadow:0 0 20px rgba(56,189,248,0.12)
-    }
-    h1{color:#38bdf8;text-align:center;margin-bottom:6px}
-    p{color:#94a3b8;text-align:center;font-size:13px;margin-bottom:14px}
-    input{
-      width:100%;
-      padding:12px;
-      margin:8px 0;
-      border-radius:10px;
-      border:none;
-      background:#020617;
-      color:#e5e7eb;
-      outline:1px solid #1f2937
-    }
-    .btn{
-      width:100%;
-      padding:12px;
-      border-radius:12px;
-      border:none;
-      background:#38bdf8;
-      color:#020617;
-      font-weight:bold;
-      margin-top:10px;
-      cursor:pointer
-    }
-    .link{
-      display:block;
-      text-align:center;
-      margin-top:12px;
-      color:#22d3ee;
-      text-decoration:none;
-      font-size:13px
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - VIKI AI World</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+            max-width: 300px;
+        }
+        input {
+            padding: 0.8rem;
+            margin: 0.5rem 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+        button {
+            padding: 1rem;
+            margin-top: 1rem;
+            font-size: 1rem;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .links {
+            margin-top: 1rem;
+            text-align: center;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+            margin: 0 0.5rem;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-
-  <div class="card">
-    <h1>Login</h1>
-    <p>VIKI AI World</p>
-
-    <input id="email" type="email" placeholder="Email" />
-    <input id="password" type="password" placeholder="Password" />
-
-    <button class="btn" onclick="login()">Login</button>
-
-    <a class="link" href="signup.html">Create new account</a>
-    <a class="link" href="index.html">← Back to Home</a>
-  </div>
-
-  <script>
-    function login(){
-      const email = document.getElementById('email').value;
-      const pass = document.getElementById('password').value;
-
-      if(email === '' || pass === ''){
-        alert('Please enter email and password');
-        return;
-      }
-
-      // Fake login success (backend baad mein)
-      alert('Login successful (demo)');
-      
-      // Next step ke liye redirect (dashboard baad mein banayenge)
-      // window.location.href = 'dashboard.html';
-    }
-  </script>
-
+    <form id="loginForm">
+        <input type="email" id="email" placeholder="Email" required>
+        <input type="password" id="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>
+    <div class="links">
+        <a href="index.html">Back to Home</a>
+        <a href="signup.html">Sign Up</a>
+    </div>
+    <script>
+        // Future Firebase integration: Replace alert with Firebase auth logic
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            if (!email || !password) {
+                alert('Please fill in all fields.');
+                return;
+            }
+            // Demo success for now; integrate Firebase Auth here later
+            alert('Login successful!');
+        });
+    </script>
 </body>
 </html>
