--- a/signup.html
+++ b/signup.html
@@ -1,26 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sign Up – VIKI AI World</title>
-<style>
-body{background:#0f172a;color:#e5e7eb;font-family:Arial;display:flex;justify-content:center;align-items:center;height:100vh}
-.card{background:#020617;padding:20px;border-radius:16px;width:100%;max-width:360px}
-input,button{width:100%;padding:12px;margin:8px 0;border-radius:10px;border:none}
-button{background:#38bdf8;font-weight:bold}
-a{color:#22d3ee;font-size:13px;display:block;text-align:center;margin-top:10px}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up - VIKI AI World</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+            max-width: 300px;
+        }
+        input {
+            padding: 0.8rem;
+            margin: 0.5rem 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+        button {
+            padding: 1rem;
+            margin-top: 1rem;
+            font-size: 1rem;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        .links {
+            margin-top: 1rem;
+            text-align: center;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+            margin: 0 0.5rem;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-<div class="card">
-<h2>Create Account</h2>
-<input placeholder="Full Name">
-<input placeholder="Email">
-<input type="password" placeholder="Password">
-<button>Sign Up</button>
-<a href="login.html">Already have account? Login</a>
-<a href="index.html">← Back Home</a>
-</div>
+    <form id="signupForm">
+        <input type="email" id="email" placeholder="Email" required>
+        <input type="password" id="password" placeholder="Password" required>
+        <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+        <button type="submit">Sign Up</button>
+    </form>
+    <div class="links">
+        <a href="index.html">Back to Home</a>
+        <a href="login.html">Login</a>
+    </div>
+    <script>
+        // Future Firebase integration: Replace alert with Firebase auth logic
+        document.getElementById('signupForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
+            if (!email || !password || !confirmPassword) {
+                alert('Please fill in all fields.');
+                return;
+            }
+            if (password !== confirmPassword) {
+                alert('Passwords do not match.');
+                return;
+            }
+            // Demo success for now; integrate Firebase Auth here later
+            alert('Sign up successful!');
+        });
+    </script>
 </body>
 </html>
