--- a/signup.html
+++ b/signup.html
@@ -8,55 +8,65 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 20px;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             background-color: #f4f4f4;
             color: #333;
         }
         form {
+            width: 100%;
+            max-width: 320px;
             display: flex;
             flex-direction: column;
-            width: 80%;
-            max-width: 300px;
+            gap: 1rem;
         }
         input {
-            padding: 0.8rem;
-            margin: 0.5rem 0;
+            padding: 1rem;
+            font-size: 1.1rem;
             border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1rem;
+            border-radius: 8px;
         }
         button {
-            padding: 1rem;
-            margin-top: 1rem;
-            font-size: 1rem;
+            padding: 1.2rem;
+            font-size: 1.2rem;
+            font-weight: bold;
             background-color: #28a745;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #218838;
         }
         .links {
-            margin-top: 1rem;
+            margin-top: 2rem;
             text-align: center;
         }
         a {
             color: #007bff;
             text-decoration: none;
-            margin: 0 0.5rem;
-        }
-        a:hover {
-            text-decoration: underline;
+            margin: 0 1rem;
         }
     </style>
+
+    <!-- Firebase Compat SDK (ab yahan bhi load) -->
+    <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-auth-compat.js"></script>
+
+    <script>
+        const firebaseConfig = {
+          apiKey: "AIzaSyC5i05JoeOGyw6qqWty8gzDEdoe5MpIoKk",
+          authDomain: "viki-ai-world.firebaseapp.com",
+          projectId: "viki-ai-world",
+          storageBucket: "viki-ai-world.appspot.com",
+          messagingSenderId: "88099998596",
+          appId: "1:88099998596:web:8bf4b8ba117fc0f6e76bd1"
+        };
+
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </head>
 <body>
     <form id="signupForm">
@@ -65,6 +75,7 @@
         <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
         <button type="submit">Sign Up</button>
     </form>
+
     <div class="links">
         <a href="index.html">Back to Home</a>
         <a href="login.html">Login</a>
@@ -88,9 +99,8 @@
                 return;
             }
             
-            // Real Firebase Create User
             firebase.auth().createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
+                .then(() => {
                     alert('Sign up successful! Welcome to VIKI AI World 🚀');
                     window.location.href = 'dashboard.html';
                 })
