--- a/login.html
+++ b/login.html
@@ -4,47 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login – VIKI AI World</title>
-  <meta name="theme-color" content="#4f46e5" />
+
+  <!-- Firebase v8 CDN -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
     body {
       background: #0f172a;
       color: #e5e7eb;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
+      font-family: Arial, Helvetica, sans-serif;
     }
-
     .card {
       background: #020617;
-      border-radius: 16px;
       padding: 22px;
+      border-radius: 16px;
       width: 100%;
       max-width: 380px;
-      box-shadow: 0 0 20px rgba(56, 189, 248, 0.12);
     }
-
-    h1 {
-      color: #38bdf8;
-      text-align: center;
-      margin-bottom: 6px;
-    }
-
-    p {
-      color: #94a3b8;
-      text-align: center;
-      font-size: 13px;
-      margin-bottom: 14px;
-    }
-
+    h1 { color: #38bdf8; text-align: center; }
     input {
       width: 100%;
       padding: 12px;
@@ -52,26 +34,23 @@
       border-radius: 10px;
       border: none;
       background: #020617;
-      color: #e5e7eb;
+      color: #fff;
       outline: 1px solid #1f2937;
     }
-
-    .btn {
+    button {
       width: 100%;
       padding: 12px;
-      border-radius: 12px;
-      border: none;
-      background: #38bdf8;
-      color: #020617;
-      font-weight: bold;
       margin-top: 10px;
+      background: #38bdf8;
+      border: none;
+      border-radius: 12px;
+      font-weight: bold;
       cursor: pointer;
     }
-
-    .link {
+    a {
       display: block;
-      text-align: center;
       margin-top: 12px;
+      text-align: center;
       color: #22d3ee;
       text-decoration: none;
       font-size: 13px;
@@ -82,31 +61,37 @@
 <body>
   <div class="card">
     <h1>Login</h1>
-    <p>VIKI AI World</p>
-
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Login</button>
 
-    <button class="btn" id="loginBtn">Login</button>
-
-    <a class="link" href="signup.html">Create new account</a>
-    <a class="link" href="index.html">← Back to Home</a>
+    <a href="signup.html">Create new account</a>
+    <a href="index.html">← Back to Home</a>
   </div>
 
-  <!-- WORKING FRONTEND LOGIN SCRIPT -->
   <script>
-    document.getElementById("loginBtn").addEventListener("click", function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+    // 🔥 SAME CONFIG JO FIREBASE CONSOLE SE HAI
+    var firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+      appId: "YOUR_APP_ID"
+    };
 
-      if (email === "" || password === "") {
-        alert("Please enter email and password");
-        return;
-      }
+    firebase.initializeApp(firebaseConfig);
 
-      alert("Login successful (Frontend Demo)");
-      window.location.href = "dashboard.html";
-    });
+    function login() {
+      var email = document.getElementById("email").value;
+      var password = document.getElementById("password").value;
+
+      firebase.auth().signInWithEmailAndPassword(email, password)
+        .then(() => {
+          window.location.href = "dashboard.html";
+        })
+        .catch((error) => {
+          alert(error.message);
+        });
+    }
   </script>
 </body>
 </html>
