--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login – VIKI AI World</title>
 
-  <!-- Firebase v8 CDN -->
+  <!-- Firebase v8 -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 
@@ -70,12 +70,14 @@
   </div>
 
   <script>
-    // 🔥 SAME CONFIG JO FIREBASE CONSOLE SE HAI
+    // ✅ REAL FIREBASE CONFIG
     var firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyBn9doD99wq5gU8kCVu3g8Kz16iabZqGKA",
+      authDomain: "viki-49b73.firebaseapp.com",
+      projectId: "viki-49b73",
+      storageBucket: "viki-49b73.appspot.com",
+      messagingSenderId: "92668810768",
+      appId: "1:92668810768:web:d0029f292bbf16e94d5c95"
     };
 
     firebase.initializeApp(firebaseConfig);
