--- a/dashboard.html
+++ b/dashboard.html
@@ -1,95 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - VIKI AI World</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f2f5;
-            color: #333;
-            display: none; /* Hide until auth check */
-        }
-        header {
-            background-color: #007bff;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-        .container {
-            padding: 1.5rem;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        h2 {
-            color: #007bff;
-        }
-        .card {
-            background: white;
-            padding: 1.5rem;
-            margin: 1rem 0;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .logout {
-            display: block;
-            text-align: center;
-            margin: 2rem 0;
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .logout:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Dashboard – VIKI AI World</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#020617" />
+
+  <!-- Firebase v8 CDN (SAME VERSION EVERYWHERE) -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif; }
+
+    body {
+      background: linear-gradient(135deg, #020617, #0f172a);
+      color: #e5e7eb;
+      min-height: 100vh;
+    }
+
+    header {
+      padding: 16px;
+      background: #020617;
+      border-bottom: 1px solid #1f2937;
+      text-align: center;
+    }
+
+    header h1 {
+      color: #38bdf8;
+      font-size: 20px;
+    }
+
+    header p {
+      font-size: 13px;
+      color: #94a3b8;
+      margin-top: 4px;
+    }
+
+    .container {
+      padding: 16px;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .card {
+      background: #020617;
+      border-radius: 16px;
+      padding: 16px;
+      margin-bottom: 16px;
+      box-shadow: 0 0 20px rgba(56,189,248,0.08);
+    }
+
+    .card h2 {
+      color: #38bdf8;
+      font-size: 16px;
+      margin-bottom: 8px;
+    }
+
+    .card p {
+      font-size: 13px;
+      color: #cbd5f5;
+    }
+
+    .email {
+      word-break: break-all;
+      font-weight: bold;
+      margin-top: 6px;
+      color: #22d3ee;
+    }
+
+    .btn {
+      width: 100%;
+      padding: 12px;
+      border-radius: 12px;
+      border: none;
+      background: #38bdf8;
+      color: #020617;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    .btn.secondary {
+      background: #1f2937;
+      color: #e5e7eb;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 12px;
+      color: #64748b;
+      margin: 20px 0;
+    }
+  </style>
 </head>
+
 <body>
-    <header>
-        <h1>VIKI AI World</h1>
-        <p>Your AI Companion Dashboard</p>
-    </header>
 
-    <div class="container">
-        <div class="card">
-            <h2>Welcome back! 👋</h2>
-            <p>You are now logged in. Future mein yahan real AI chat interface aayega.</p>
-        </div>
+  <header>
+    <h1>VIKI AI WORLD</h1>
+    <p>Your AI-powered learning dashboard</p>
+  </header>
 
-        <div class="card">
-            <h2>Quick Actions</h2>
-            <p>• Start a new conversation<br>
-               • View past chats<br>
-               • Explore AI models<br>
-               • Settings & Profile</p>
-        </div>
+  <div class="container">
 
-        <a href="#" id="logout" class="logout">← Logout</a>
+    <!-- USER INFO -->
+    <div class="card">
+      <h2>👤 Account</h2>
+      <p>Logged in as:</p>
+      <div id="userEmail" class="email">Loading...</div>
+      <button class="btn" onclick="logout()">Logout</button>
     </div>
 
-    <script>
-        // Auth state check
-        firebase.auth().onAuthStateChanged((user) => {
-            if (user) {
-                // Logged in → show dashboard
-                document.body.style.display = 'block';
-            } else {
-                // Not logged in → redirect
-                alert('Please login first!');
-                window.location.href = 'login.html';
-            }
-        });
+    <!-- FEATURES -->
+    <div class="card">
+      <h2>🚀 What You Can Build</h2>
+      <p>• Mobile-first websites</p>
+      <p>• Firebase login systems</p>
+      <p>• AI-style dashboards</p>
+      <p>• Free tools only</p>
+    </div>
 
-        // Logout button
-        document.getElementById('logout').addEventListener('click', function(e) {
-            e.preventDefault();
-            firebase.auth().signOut().then(() => {
-                window.location.href = 'index.html';
-            });
-        });
-    </script>
+    <!-- NEXT STEPS -->
+    <div class="card">
+      <h2>📌 Next Steps</h2>
+      <p>• Add Firestore database</p>
+      <p>• Save user data</p>
+      <p>• Add AI tools section</p>
+      <button class="btn secondary" onclick="alert('Coming soon')">
+        AI Tools (Coming Soon)
+      </button>
+    </div>
+
+  </div>
+
+  <footer>
+    © 2025 VIKI AI World — Free • Real • Mobile First
+  </footer>
+
+  <script>
+    // 🔥 SAME firebaseConfig AS LOGIN / SIGNUP
+    var firebaseConfig = {
+      apiKey: "AIzaSyBn9doD99wq5gU8kCVu3g8Kz16iabZqGKA",
+      authDomain: "viki-49b73.firebaseapp.com",
+      projectId: "viki-49b73",
+      appId: "1:92668810768:web:d0029f292bbf16e94d5c95"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+
+    // ✅ AUTH PROTECTION (NO WHITE SCREEN)
+    firebase.auth().onAuthStateChanged(function(user) {
+      if (user) {
+        document.getElementById("userEmail").innerText = user.email;
+      } else {
+        window.location.href = "login.html";
+      }
+    });
+
+    function logout() {
+      firebase.auth().signOut().then(function() {
+        window.location.href = "login.html";
+      });
+    }
+  </script>
+
 </body>
 </html>
